# tink-cc-gcpkms

./: MODULE.bazel  README.md  WORKSPACE  tink_cc_gcpkms_deps.bzl  tink_cc_gcpkms_deps_init.bzl
examples/: MODULE.bazel  WORKSPACE
examples/envelopeaead/: BUILD.bazel  envelopeaead_cli.cc  envelopeaead_cli_test.sh  grpc.patch
kokoro/: create_github_release_branch.sh  create_github_release_tag.sh
kokoro/gcp_ubuntu/bazel/: run_tests.sh
kokoro/gcp_ubuntu/examples/bazel/: run_tests.sh
kokoro/macos_external/bazel/: run_tests.sh
tink/integration/gcpkms/: BUILD.bazel  gcp_kms_aead.cc  gcp_kms_aead.h  gcp_kms_aead_integration_test.cc  gcp_kms_aead_test.cc  gcp_kms_client.cc  gcp_kms_client.h  gcp_kms_client_test.cc  gcp_kms_mac.cc  gcp_kms_mac.h  gcp_kms_mac_test.cc  gcp_kms_public_key_sign.cc  gcp_kms_public_key_sign.h  gcp_kms_public_key_sign_test.cc  gcp_kms_public_key_verify.cc  gcp_kms_public_key_verify.h  gcp_kms_public_key_verify_test.cc  gcp_kms_util.cc  gcp_kms_util.h  gcp_kms_util_test.cc
tink/integration/gcpkms/internal/: BUILD.bazel  gcp_kms_util.cc  gcp_kms_util.h  gcp_kms_util_test.cc  test_file_util.cc  test_file_util.h
