# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Tink C++ GCP KMS Bazel Module definition."""

module(
    name = "tink_cc_gcpkms",
    version = "2.4.0",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "google_root_pem",
    urls = ["https://pki.goog/roots.pem"],
)

bazel_dep(
    name = "rules_cc",
    version = "0.2.9",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20250127.1",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20251003-2193a2bf",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "grpc",
    version = "1.74.1",
    repo_name = "com_github_grpc_grpc",
)
bazel_dep(
    name = "tink_cc",
    version = "2.4.0",
)
bazel_dep(
    name = "google_cloud_cpp",
    version = "3.0.0-rc1",
)
bazel_dep(
    name = "boringssl",
    version = "0.20251002.0",
)
bazel_dep(
    name = "re2",
    version = "2025-08-12",
    repo_name = "com_googlesource_code_re2",
)

bazel_dep(
    name = "googletest",
    version = "1.17.0",
    dev_dependency = True,
    repo_name = "com_google_googletest",
)
