# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Module definition for Tink C++ GCP KMS Examples."""

# Omitting `version` because this is not meant to be depended on by other modules.
module(name = "tink_cc_examples")

bazel_dep(
    name = "tink_cc_gcpkms",
)
local_path_override(
    module_name = "tink_cc_gcpkms",
    path = "../",
)

bazel_dep(
    name = "tink_cc",
    version = "2.4.0",
)
bazel_dep(
    name = "googletest",
    version = "1.17.0",
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20250814.1",
    repo_name = "com_google_absl",
)
