load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["grpc.patch"])

cc_binary(
    name = "envelopeaead_cli",
    srcs = ["envelopeaead_cli.cc"],
    deps = [
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//proto:tink_cc_proto",
        "@tink_cc//tink:aead",
        "@tink_cc//tink/aead:aead_config",
        "@tink_cc//tink/aead:aead_key_templates",
        "@tink_cc//tink/aead:kms_envelope_aead",
        "@tink_cc_gcpkms//tink/integration/gcpkms:gcp_kms_client",
    ],
)

sh_test(
    name = "envelopeaead_cli_test",
    size = "small",
    srcs = ["envelopeaead_cli_test.sh"],
    args = [
        "$(rootpath :envelopeaead_cli)",
        "gcp-kms://projects/tink-test-infrastructure/locations/global/keyRings/unit-and-integration-testing/cryptoKeys/aead-key",
        "$(rootpath //testdata/gcp:credential.json)",
    ],
    data = [
        ":envelopeaead_cli",
        # Change this to your credential
        "//testdata/gcp:credential.json",
    ],
    tags = [
        "manual",
        "requires-network",
    ],
)
