package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "gcp_kms_aead",
    srcs = ["gcp_kms_aead.cc"],
    hdrs = ["gcp_kms_aead.h"],
    include_prefix = "tink/integration/gcpkms",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_googleapis//google/cloud/kms/v1:kms_cc_grpc",
        "@com_googlesource_code_re2//:re2",
        "@google_cloud_cpp//:kms",
        "@tink_cc//tink:aead",
        "@tink_cc//tink/util:status",
        "@tink_cc//tink/util:statusor",
    ],
)

cc_library(
    name = "gcp_kms_public_key_sign",
    srcs = ["gcp_kms_public_key_sign.cc"],
    hdrs = ["gcp_kms_public_key_sign.h"],
    include_prefix = "tink/integration/gcpkms",
    visibility = ["//visibility:public"],
    deps = [
        "@boringssl//:crypto",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/status",
        "@com_googlesource_code_re2//:re2",
        "@google_cloud_cpp//:kms",
        "@tink_cc//tink:public_key_sign",
    ],
)

cc_library(
    name = "gcp_kms_public_key_verify",
    srcs = ["gcp_kms_public_key_verify.cc"],
    hdrs = ["gcp_kms_public_key_verify.h"],
    include_prefix = "tink/integration/gcpkms",
    visibility = ["//visibility:public"],
    deps = [
        "@boringssl//:crypto",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/status",
        "@com_googlesource_code_re2//:re2",
        "@google_cloud_cpp//:kms",
        "@tink_cc//proto:common_cc_proto",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:keyset_reader",
        "@tink_cc//tink:partial_key_access",
        "@tink_cc//tink:partial_key_access_token",
        "@tink_cc//tink:public_key_verify",
        "@tink_cc//tink/signature:config_v0",
        "@tink_cc//tink/signature:key_gen_config_v0",
        "@tink_cc//tink/signature:ml_dsa_parameters",
        "@tink_cc//tink/signature:ml_dsa_public_key",
        "@tink_cc//tink/signature:signature_config",
        "@tink_cc//tink/signature:signature_pem_keyset_reader",
        "@tink_cc//tink/signature:signature_public_key",
        "@tink_cc//tink/signature:slh_dsa_parameters",
        "@tink_cc//tink/signature:slh_dsa_public_key",
    ],
)

cc_library(
    name = "gcp_kms_client",
    srcs = ["gcp_kms_client.cc"],
    hdrs = ["gcp_kms_client.h"],
    include_prefix = "tink/integration/gcpkms",
    visibility = ["//visibility:public"],
    deps = [
        ":gcp_kms_aead",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@tink_cc//tink:aead",
        "@tink_cc//tink:kms_client",
        "@tink_cc//tink:kms_clients",
        "@tink_cc//tink:version",
        "@tink_cc//tink/util:status",
        "@tink_cc//tink/util:statusor",
    ],
)

cc_test(
    name = "gcp_kms_aead_integration_test",
    size = "medium",
    srcs = ["gcp_kms_aead_integration_test.cc"],
    data = [
        "//testdata/gcp:credentials",
        "@google_root_pem//file",
    ],
    # This target requires valid credentials to interact with the Google Cloud
    # KMS.
    tags = ["manual"],
    deps = [
        ":gcp_kms_aead",
        ":gcp_kms_client",
        "@bazel_tools//tools/cpp/runfiles",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@tink_cc//tink:aead",
        "@tink_cc//tink/util:test_matchers",
    ],
)

cc_test(
    name = "gcp_kms_client_test",
    size = "medium",
    srcs = ["gcp_kms_client_test.cc"],
    data = ["//testdata/gcp:credentials"],
    deps = [
        ":gcp_kms_client",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@tink_cc//tink/util:test_matchers",
        "@tink_cc//tink/util:test_util",
    ],
)

cc_test(
    name = "gcp_kms_aead_test",
    srcs = ["gcp_kms_aead_test.cc"],
    deps = [
        ":gcp_kms_aead",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_googleapis//google/cloud/kms/v1:kms_cc_grpc",
        "@com_google_googletest//:gtest_main",
        "@google_cloud_cpp//:kms",
        "@google_cloud_cpp//:kms_mocks",
        "@tink_cc//tink/util:status",
        "@tink_cc//tink/util:statusor",
        "@tink_cc//tink/util:test_matchers",
        "@tink_cc//tink/util:test_util",
    ],
)

cc_test(
    name = "gcp_kms_public_key_sign_test",
    srcs = ["gcp_kms_public_key_sign_test.cc"],
    deps = [
        ":gcp_kms_public_key_sign",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_googletest//:gtest_main",
        "@google_cloud_cpp//:kms",
        "@google_cloud_cpp//:kms_mocks",
        "@tink_cc//tink/util:test_matchers",
        "@tink_cc//tink/util:test_util",
    ],
)

cc_test(
    name = "gcp_kms_public_key_verify_test",
    srcs = ["gcp_kms_public_key_verify_test.cc"],
    deps = [
        ":gcp_kms_public_key_verify",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@google_cloud_cpp//:kms",
        "@google_cloud_cpp//:kms_mocks",
        "@tink_cc//tink:key_status",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:keyset_handle_builder",
        "@tink_cc//tink:partial_key_access",
        "@tink_cc//tink:public_key_verify",
        "@tink_cc//tink/signature:config_v0",
        "@tink_cc//tink/signature:signature_config",
        "@tink_cc//tink/util:test_matchers",
        "@tink_cc//tink/util:test_util",
    ],
)
