load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "gcp_kms_aead",
    srcs = ["gcp_kms_aead.cc"],
    hdrs = ["gcp_kms_aead.h"],
    include_prefix = "tink/integration/gcpkms",
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/status",
        "@google_cloud_cpp//:kms",
        "@googleapis//google/cloud/kms/v1:kms_cc_grpc",
        "@grpc//:grpc++",
        "@re2",
        "@tink_cc//tink:aead",
        "@tink_cc//tink/util:status",
        "@tink_cc//tink/util:statusor",
    ],
)

cc_library(
    name = "gcp_kms_public_key_sign",
    srcs = ["gcp_kms_public_key_sign.cc"],
    hdrs = ["gcp_kms_public_key_sign.h"],
    include_prefix = "tink/integration/gcpkms",
    visibility = ["//visibility:public"],
    deps = [
        "//tink/integration/gcpkms/internal:gcp_kms_util",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/status",
        "@boringssl//:crypto",
        "@google_cloud_cpp//:kms",
        "@tink_cc//tink:public_key_sign",
    ],
)

cc_library(
    name = "gcp_kms_public_key_verify",
    srcs = ["gcp_kms_public_key_verify.cc"],
    hdrs = ["gcp_kms_public_key_verify.h"],
    include_prefix = "tink/integration/gcpkms",
    visibility = ["//visibility:public"],
    deps = [
        "//tink/integration/gcpkms/internal:gcp_kms_util",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/status",
        "@google_cloud_cpp//:kms",
        "@tink_cc//proto:common_cc_proto",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:keyset_reader",
        "@tink_cc//tink:partial_key_access",
        "@tink_cc//tink:partial_key_access_token",
        "@tink_cc//tink:public_key_verify",
        "@tink_cc//tink/signature:config_v0",
        "@tink_cc//tink/signature:key_gen_config_v0",
        "@tink_cc//tink/signature:ml_dsa_parameters",
        "@tink_cc//tink/signature:ml_dsa_public_key",
        "@tink_cc//tink/signature:signature_config",
        "@tink_cc//tink/signature:signature_pem_keyset_reader",
        "@tink_cc//tink/signature:signature_public_key",
        "@tink_cc//tink/signature:slh_dsa_parameters",
        "@tink_cc//tink/signature:slh_dsa_public_key",
    ],
)

cc_library(
    name = "gcp_kms_client",
    srcs = ["gcp_kms_client.cc"],
    hdrs = ["gcp_kms_client.h"],
    include_prefix = "tink/integration/gcpkms",
    visibility = ["//visibility:public"],
    deps = [
        ":gcp_kms_aead",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
        "@grpc//:grpc++",
        "@tink_cc//tink:aead",
        "@tink_cc//tink:kms_client",
        "@tink_cc//tink:kms_clients",
        "@tink_cc//tink:version",
        "@tink_cc//tink/util:status",
        "@tink_cc//tink/util:statusor",
    ],
)

cc_test(
    name = "gcp_kms_aead_integration_test",
    size = "medium",
    srcs = ["gcp_kms_aead_integration_test.cc"],
    data = [
        "//testdata/gcp:credentials",
        "@google_root_pem//file",
    ],
    # This target requires valid credentials to interact with the Google Cloud
    # KMS.
    tags = ["manual"],
    deps = [
        ":gcp_kms_aead",
        ":gcp_kms_client",
        "//tink/integration/gcpkms/internal:test_file_util",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@grpc//:grpc++",
        "@tink_cc//tink:aead",
        "@tink_cc//tink/util:test_matchers",
    ],
)

cc_test(
    name = "gcp_kms_client_test",
    size = "medium",
    srcs = ["gcp_kms_client_test.cc"],
    data = ["//testdata/gcp:credentials"],
    deps = [
        ":gcp_kms_client",
        "//tink/integration/gcpkms/internal:test_file_util",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink/util:test_matchers",
        "@tink_cc//tink/util:test_util",
    ],
)

cc_test(
    name = "gcp_kms_aead_test",
    srcs = ["gcp_kms_aead_test.cc"],
    deps = [
        ":gcp_kms_aead",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@google_cloud_cpp//:kms",
        "@google_cloud_cpp//:kms_mocks",
        "@googleapis//google/cloud/kms/v1:kms_cc_grpc",
        "@googletest//:gtest_main",
        "@grpc//:grpc++",
        "@tink_cc//tink/util:status",
        "@tink_cc//tink/util:statusor",
        "@tink_cc//tink/util:test_matchers",
        "@tink_cc//tink/util:test_util",
    ],
)

cc_test(
    name = "gcp_kms_public_key_sign_test",
    srcs = ["gcp_kms_public_key_sign_test.cc"],
    deps = [
        ":gcp_kms_public_key_sign",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
        "@google_cloud_cpp//:kms",
        "@google_cloud_cpp//:kms_mocks",
        "@googletest//:gtest_main",
        "@tink_cc//tink/util:test_matchers",
        "@tink_cc//tink/util:test_util",
    ],
)

cc_test(
    name = "gcp_kms_public_key_verify_test",
    srcs = ["gcp_kms_public_key_verify_test.cc"],
    deps = [
        ":gcp_kms_public_key_verify",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@google_cloud_cpp//:kms",
        "@google_cloud_cpp//:kms_mocks",
        "@googletest//:gtest_main",
        "@tink_cc//tink:key_status",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:keyset_handle_builder",
        "@tink_cc//tink:partial_key_access",
        "@tink_cc//tink:public_key_verify",
        "@tink_cc//tink/signature:config_v0",
        "@tink_cc//tink/signature:signature_config",
        "@tink_cc//tink/util:test_matchers",
        "@tink_cc//tink/util:test_util",
    ],
)

cc_library(
    name = "gcp_kms_mac",
    srcs = ["gcp_kms_mac.cc"],
    hdrs = ["gcp_kms_mac.h"],
    include_prefix = "tink/integration/gcpkms",
    visibility = ["//visibility:public"],
    deps = [
        "//tink/integration/gcpkms/internal:gcp_kms_util",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/crc:crc32c",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@google_cloud_cpp//:common",
        "@google_cloud_cpp//:kms",
        "@tink_cc//tink:mac",
    ],
)

cc_test(
    name = "gcp_kms_mac_test",
    srcs = ["gcp_kms_mac_test.cc"],
    deps = [
        ":gcp_kms_mac",
        "@abseil-cpp//absl/crc:crc32c",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@google_cloud_cpp//:common",
        "@google_cloud_cpp//:kms",
        "@google_cloud_cpp//:kms_mocks",
        "@googletest//:gtest_main",
        "@tink_cc//tink:mac",
        "@tink_cc//tink/util:test_matchers",
        "@tink_cc//tink/util:test_util",
    ],
)
