load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "gcp_kms_util",
    srcs = ["gcp_kms_util.cc"],
    hdrs = ["gcp_kms_util.h"],
    include_prefix = "tink/integration/gcpkms/internal",
    deps = [
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/crc:crc32c",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_googlesource_code_re2//:re2",
        "@google_cloud_cpp//:common",
        "@google_cloud_cpp//:kms",
    ],
)

cc_test(
    name = "gcp_kms_util_test",
    srcs = ["gcp_kms_util_test.cc"],
    deps = [
        ":gcp_kms_util",
        "@com_google_absl//absl/crc:crc32c",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_googletest//:gtest_main",
        "@google_cloud_cpp//:common",
        "@google_cloud_cpp//:kms",
        "@google_cloud_cpp//:kms_mocks",
        "@tink_cc//tink/util:test_matchers",
    ],
)

cc_library(
    name = "test_file_util",
    testonly = 1,
    srcs = ["test_file_util.cc"],
    hdrs = ["test_file_util.h"],
    include_prefix = "tink/internal",
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)
