load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "gcp_kms_util",
    srcs = ["gcp_kms_util.cc"],
    hdrs = ["gcp_kms_util.h"],
    include_prefix = "tink/integration/gcpkms/internal",
    deps = [
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/crc:crc32c",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@google_cloud_cpp//:common",
        "@google_cloud_cpp//:kms",
        "@re2",
    ],
)

cc_test(
    name = "gcp_kms_util_test",
    srcs = ["gcp_kms_util_test.cc"],
    deps = [
        ":gcp_kms_util",
        "@abseil-cpp//absl/crc:crc32c",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
        "@google_cloud_cpp//:common",
        "@google_cloud_cpp//:kms",
        "@google_cloud_cpp//:kms_mocks",
        "@googletest//:gtest_main",
        "@tink_cc//tink/util:test_matchers",
    ],
)

cc_library(
    name = "test_file_util",
    testonly = 1,
    srcs = ["test_file_util.cc"],
    hdrs = ["test_file_util.h"],
    include_prefix = "tink/internal",
    deps = [
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)
